<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_6_game_score"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/top_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/s1t1"
            android:layout_weight="1.7"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@drawable/gradient_anim_list"
            tools:ignore="RtlCompat"
            app:drawableLeftCompat="@drawable/note_top_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/cong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s6t1"
        android:textColor="@color/font_2"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/your_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s6t2"
        android:textColor="@color/font_2"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="12 Points"
        android:textColor="@color/StrongGreen"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/score"/>

    <TextView
        android:id="@+id/your_vocabulary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s6t4"
        android:textColor="@color/font_2"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="6 Chords"
        android:textColor="@color/StrongRed"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/vocabulary"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rpl_effect"
        android:text="@string/s6t9"
        android:textAllCaps="false"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:id="@+id/main_menu_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rpl_effect"
        android:text="@string/s1t5"
        android:textAllCaps="false"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:id="@+id/leaderboards_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rpl_effect"
        android:text="@string/s6t10"
        android:textAllCaps="false"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:id="@+id/play_again_btn"/>

</LinearLayout>