<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_3_game_difficulty"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/top_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/s1t1"
            android:layout_weight="1.7"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@drawable/gradient_anim_list"
            tools:ignore="RtlCompat"
            app:drawableLeftCompat="@drawable/note_top_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s3t1"
        android:layout_marginTop="10dp"
        android:textColor="@color/font_2"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:minHeight="70dp"
        android:background="@drawable/easy_btn"
        android:text="@string/s3t2"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textColor="@color/Black"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/easy_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:minHeight="70dp"
        android:background="@drawable/medium_btn"
        android:text="@string/s3t3"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textColor="@color/Black"
        android:shadowColor="#ffffff"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/medium_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:minHeight="70dp"
        android:background="@drawable/hard_btn"
        android:text="@string/s3t4"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textColor="@color/Black"
        android:shadowColor="#ffffff"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/hard_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rpl_effect"
        android:text="@string/s2t4"
        android:textAllCaps="false"
        android:textSize="35sp"
        android:padding="2dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:id="@+id/back_btn"/>

</LinearLayout>