<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background">
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/notes_gif"
        android:background="@null"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_1_main"
        android:orientation="vertical"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/top_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/s1t1"
                android:layout_weight="1.7"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="@drawable/gradient_anim_list"
                tools:ignore="RtlCompat"
                app:drawableLeftCompat="@drawable/note_top_icon" />

        </LinearLayout>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/s1t2"
            android:textColor="@color/font_2"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="#EEE"
            android:minHeight="55dp"
            android:textSize="24sp"
            android:paddingHorizontal="20dp"
            android:hint="@string/s1t3"
            android:id="@+id/name_edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rpl_effect"
            android:text="@string/s1t4"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:padding="10dp"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:id="@+id/press_to_begin_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rpl_effect"
            android:text="@string/s1t5"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:padding="10dp"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:id="@+id/leaderboards_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rpl_effect"
            android:text="@string/s1t6"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:padding="10dp"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:id="@+id/chords_guide_btn"/>
    </LinearLayout>
</RelativeLayout>
