<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_10_learn_chords_piano"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/top_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/s1t1"
            android:layout_weight="1.7"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@drawable/gradient_anim_list"
            tools:ignore="RtlCompat"
            app:drawableLeftCompat="@drawable/note_top_icon" />

    </LinearLayout>
    <TextView
        android:id="@+id/chords_textview"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/s10t1"
        android:textColor="@color/font_2"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="34sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="5"
        android:layout_gravity="center"
        android:id="@+id/piano_grid"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rpl_effect"
            android:text="@string/s10t2"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:id="@+id/main_menu_btn"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rpl_effect"
            android:text="@string/s2t4"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:id="@+id/back_btn"
            android:layout_weight="1"/>

</LinearLayout>
</LinearLayout>