<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_7_leaderboards"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/top_11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/s1t1"
            android:layout_weight="1.7"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="42sp"
            android:textStyle="bold"
            android:background="@drawable/gradient_anim_list"
            tools:ignore="RtlCompat"
            app:drawableLeftCompat="@drawable/note_top_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/chordNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="C major"
        android:textColor="@color/font_2"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="38sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/chordImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/image_border"
        android:maxHeight="110dp"
        android:src="@null"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:scaleX="1.15"
        android:scaleY="1.15"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/press_to_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s5t5"
        android:textColor="@color/font_2"
        android:gravity="center"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <ImageButton
        android:id="@+id/audio_btn"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textAllCaps="false"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:padding="5dp"
        android:background="@null"
        android:src="@drawable/audio_btn_selector"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chords_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rpl_effect"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/s11t1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="26sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rpl_effect"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/s7t2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="26sp"
        />

</LinearLayout>